# dlmuduo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  check_limits.sh  docker-compose.yml  docker-entrypoint.sh  run_http_server_for_100k.sh  run_qps_wrk.sh  run_server_for_100k.sh  setup_100k_limits.sh  start.sh  test_100k_qps_memory.sh  test_qps_cpu.sh
.github/workflows/: ci.yml
WebBench-master/: webbench
assets/: README.md
autobuild/: deps.sh  docker.sh  install.sh
docs/cn/: architecture_cn.md  benchmark_cn.md  shortener_cn.md
docs/en/: architecture.md  benchmark.md  shortener.md
example/: concurrent_test.cc  test.cc
include/: Acceptor.hpp  Buffer.hpp  CallbackTypes.hpp  Connection.hpp  EventLoop.hpp  Logger.hpp  LoopThread.hpp  LoopThreadPool.hpp  Poller.hpp  Socket.hpp  TcpServer.hpp  Timer.hpp  m_ser.hpp
include/log_system/: Logformat.hpp  Logger.hpp  buffer.hpp  lcz_log.h  level.hpp  looper.hpp  message.hpp  sink.hpp  utility.hpp
net/http/: CMakeLists.txt  http.hpp  main.cc
net/http/shortener/: CMakeLists.txt  base62.hpp  index_html.hpp  init.sql  mysql_pool.hpp  redis_pool.hpp  shortener.cc  shortener.hpp  shortener_server.cc
scripts/bench/: README.txt  check_limits.sh  connect_200k.sh  run_http_server_for_100k.sh  run_latency_bench.sh  run_qps_wrk.sh  run_server_for_100k.sh  setup_100k_limits.sh  test_100k_qps_memory.sh  test_qps_cpu.sh
scripts/shortener/: run_full_bench.sh  run_mixed_bench.sh  run_shortener_bench.sh  shortener_gen_urls.py  shortener_mixed_wrk.lua  shortener_wrk.lua  step1_seed_data.py  step2_warm_redis.sh  step3_wrk_mixed.lua  wrk_10k_mixed.lua  wrk_cold.lua  wrk_cold_sustained.lua  wrk_mixed_real.lua  wrk_random.lua  wrk_sustained_cold.lua
src/: Acceptor.cc  Buffer.cc  CMakeLists.txt  Connection.cc  EventLoop.cc  LoopThread.cc  LoopThreadPool.cc  Poller.cc  Socket.cc  TcpServer.cc  Timer.cc  muduo_server_init.cc
tests/: CMakeLists.txt  test_any.cc  test_buffer.cc  test_channel.cc  test_connection.cc  test_eventloop.cc  test_logger.cc  test_loopthread.cc  test_loopthreadpool.cc  test_socket.cc  test_tcpserver.cc  test_timingwheel.cc
